--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  connectivity_plus: ^6.1.0
   flutter:
     sdk: flutter
   flutter_custom_tabs: ^2.1.0
